Controllers not done :(

--- a/app/Resources/views/adminArea.html.twig
+++ b/app/Resources/views/adminArea.html.twig
@@ -16,9 +16,8 @@
 <body>
 <div class="w3-container">
     <h1>Admin area</h1>
-    <h1>Welcome</h1> <?php echo $_POST["username"]; ?>
     <ul>
-        <li>Add post</li>
+        <li><a href="{{ path('addpost') }}"> Add post</a></li>
         <li>Edit post</li>
         <li>Delete post</li>
 
