--- a/app/Resources/views/posts/post_new.html.twig
+++ b/app/Resources/views/posts/post_new.html.twig
@@ -2,9 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <title>Title</title>
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+    <script>
+        tinymce.init({
+            selector: "textarea",
+            plugins: [
+                "advlist autolink lists link image charmap print preview anchor",
+                "searchreplace visualblocks code fullscreen",
+                "insertdatetime media table contextmenu paste"
+            ],
+            toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image"
+        });
+    </script>
 </head>
-<body>
+{% block body %}
+<div class="w3-container">
+    <form action="{{ path('post_new') }}" method="post">
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
 
-</body>
+        <input type="submit" value="Create" />
+        {{ form_end(form) }}
+
+        <p>                    </p>
+    </form>
+
+</div>
+
+
+<div class="w3-container">
+
+
+    <form action='' method='post'>
+
+
+        <p><label>Title</label><br />
+            <input type='text' name='postTitle' ></p>
+
+        <p><label>Description</label><br />
+            <textarea name='postDesc' cols='60' rows='10'></textarea></p>
+
+        <p><label>Content</label><br />
+            <textarea name='postCont' cols='60' rows='10'></textarea></p>
+
+        <p><input type='submit' name='submit' value='Submit'></p>
+
+    </form>
+
+
+</div>
+
+{% endblock %}
 </html>
