--- a/app/Resources/views/adminArea.html.twig
+++ b/app/Resources/views/adminArea.html.twig
@@ -17,7 +17,7 @@
 <div class="w3-container">
     <h1>Admin area</h1>
     <ul>
-        <li><a href="{{ path('addpost') }}"> Add post</a></li>
+        <li><a href="{{ path('post_new') }}"> Add post</a></li>
         <li>Edit post</li>
         <li>Delete post</li>
 
