--- a/app/Resources/views/posts/post_index.html.twig
+++ b/app/Resources/views/posts/post_index.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+{% block body %}
 <h1>Dodane</h1>
-</body>
+{% endblock %}
 </html>
