--- a/app/Resources/views/posts/post_new.html.twig
+++ b/app/Resources/views/posts/post_new.html.twig
@@ -18,16 +18,44 @@
         });
     </script>
 </head>
+
+{% stylesheets 'bundles/addPost.css' filter='cssrewrite' %}
+
+<link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
+
+{% endstylesheets %}
 {% block body %}
+    <div class="w3-top">
+        <div class="w3-bar" id="myNavbar">
+            <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="{{ path('homepage') }}" class="w3-bar-item w3-button w3-left">HOME</a>
+            <a href="{{ path('photoGallery') }}" class="w3-bar-item w3-button w3-hide-small w3-left"><i class="fa fa-th"></i> PHOTOS</a>
+            <a href="/app/Resources/views/forum.html.twig" class="w3-bar-item w3-button w3-hide-small w3-left"><i class="fa fa-envelope"></i> FORUM</a>
+            <a href="/app/Resources/views/default/index.html.twig" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
+            <i class="fa fa-search"></i>
 
+
+        </div>
+    </div>
+<div class="w3-display-middle">
     <div class="w3-container">
-
+        <div class="w3-section">
         {{ form_start(form)}}
-        {{ form_widget(form) }}
-        {{ form_end(form) }}
+            {{ form_row(form.title) }}
+            {{ form_row(form.content) }}
+            {{ form_row(form.dataPosted) }}
+            {{ form_row(form.image) }}
+            {{ form_row(form.tags) }}
 
+            <button class="w3-button w3-block w3-gray w3-section w3-padding" type="submit">Submit</button>
+
+            {{ form_end(form) }}
 
     </div>
+    </div>
+</div>
 
 
 <!--<div class="w3-container">
