--- a/app/Resources/views/startPage.html.twig
+++ b/app/Resources/views/startPage.html.twig
@@ -18,8 +18,10 @@
 
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+
     <div class="w3-display-topleft w3-padding-large w3-xlarge">
-        <button  class="w3-button w3-black w3-small w3-wide w3-opacity-min"><a href="{{ path('fos_user_security_login') }}">Log in</a></button>
+        <button  class="w3-button w3-black w3-small w3-wide w3-opacity-min" >><a href="{{ path('fos_user_security_login') }}">Log in</a></button>
+
     </div>
     <div class="w3-display-topright w3-padding-large w3-xlarge">
         <button  class="w3-button w3-black w3-small w3-wide w3-opacity-min"><a href="{{ path('fos_user_registration_register') }}">Sign Up</a></button>
@@ -31,7 +33,13 @@
     </div>
 
 </div>
+
+
+
 </body>
 {% endblock %}
+
+
+
 </html>
 
