--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,6 +1,17 @@
 {% extends "@FOSUser/layout.html.twig" %}
+{% block head %}
+    {{ parent() }}
+    <title>{% block title %}Sign in{% endblock %}</title>
+    {% stylesheets 'bundles/startPage.css' filter='cssrewrite' %}
 
+    <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
+
+    {% endstylesheets %}
+{% endblock %}
 
 {% block fos_user_content %}
+
     {{ include('@FOSUser/Security/login_content.html.twig') }}
+
+
 {% endblock fos_user_content %}
