--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -8,6 +8,7 @@
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
+    <div class="bgimg">
     <div class="w3-display-middle">
         <div class="w3-container">
             <div class="w3-section">
@@ -20,8 +21,9 @@
     <input  type="checkbox" id="remember_me" name="_remember_me" value="on" />
                 <label><b>Remember me</b></label>
                 <button class="w3-button w3-block w3-gray w3-section w3-padding" type="submit">Log in</button>
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+
             </div>
         </div>
+    </div>
     </div>
 </form>
