--- a/app/Resources/views/aboutMe.html.twig
+++ b/app/Resources/views/aboutMe.html.twig
@@ -23,8 +23,8 @@
         <a href="{{ path('homepage') }}" class="w3-bar-item w3-button w3-right">HOME</a>
         <a href="{{ path('photoGallery') }}" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-th"></i> PHOTOS</a>
         <a href="/app/Resources/views/forum.html.twig" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-envelope"></i> FORUM</a>
-        <a href="/app/Resources/views/default/index.html.twig" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
-            <i class="fa fa-search"></i>
+        <a href="{{ path('fos_user_security_logout') }}" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
+
         </a>
 
     </div>
