--- a/app/Resources/views/samplePost.html.twig
+++ b/app/Resources/views/samplePost.html.twig
@@ -25,7 +25,7 @@
         <a href="{{ path('homepage') }}" class="w3-bar-item w3-button">HOME</a>
         <a href="{{ path('photoGallery') }}" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PHOTOS</a>
         <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-        <a href="/app/Resources/views/default/index.html.twig" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
+        <a href="{{ path('fos_user_security_logout') }}" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
         <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
             <i class="fa fa-search"></i>
         </a>
