--- a/app/Resources/views/adminArea.html.twig
+++ b/app/Resources/views/adminArea.html.twig
@@ -18,8 +18,7 @@
     <h1>Admin area</h1>
     <ul>
         <li><a href="{{ path('post_new') }}"> Add post</a></li>
-        <li>Edit post</li>
-        <li>Delete post</li>
+        <li><a href="{{ path('adminPosts') }}">Show posts</a></li>
 
     </ul>
 
