--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -117,7 +117,7 @@
                     <div class="w3-container">
                          <div class="w3-row">
                             <div class="w3-col m8 s12">
-                                <p><button class="w3-button w3-padding-large w3-white w3-border"><a href="{{ path('post_show', { 'id': post.getId() }) }}"> <b>READ MORE »</b></a></button></p>-->
+                                <p><button class="w3-button w3-padding-large w3-white w3-border"><a href="{{ path('post_show', { 'id': post.getId() }) }}"> <b>READ MORE »</b></a></button></p>
                             </div>
                             <div class="w3-col m4 w3-hide-small">
                                 <p><span class="w3-padding-large w3-right"><b>{{ post.tags }}  </b></span></p>
@@ -145,7 +145,6 @@
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
         <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
         <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
 
 
