--- a/app/Resources/views/posts/post_edit.html.twig
+++ b/app/Resources/views/posts/post_edit.html.twig
@@ -2,9 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <title>Title</title>
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+    <!--<script>
+        tinymce.init({
+            selector: "textarea",
+            plugins: [
+                "advlist autolink lists link image charmap print preview anchor",
+                "searchreplace visualblocks code fullscreen",
+                "insertdatetime media table contextmenu paste"
+            ],
+            toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image"
+        });
+    </script>-->
 </head>
-<body>
 
-</body>
+{% stylesheets 'bundles/addPost.css' filter='cssrewrite' %}
+
+<link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
+
+{% endstylesheets %}
+{% block body %}
+    <div class="w3-top">
+        <div class="w3-bar" id="myNavbar">
+            <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="{{ path('homepage') }}" class="w3-bar-item w3-button w3-left">HOME</a>
+            <a href="{{ path('photoGallery') }}" class="w3-bar-item w3-button w3-hide-small w3-left"><i class="fa fa-th"></i> PHOTOS</a>
+            <a href="/app/Resources/views/forum.html.twig" class="w3-bar-item w3-button w3-hide-small w3-left"><i class="fa fa-envelope"></i> FORUM</a>
+            <a href="{{ path('fos_user_security_logout') }}" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
+            <i class="fa fa-search"></i>
+
+
+        </div>
+    </div>
+    <div class="w3-display-middle">
+        <div class="w3-container">
+            <div class="w3-section">
+                {{ form_start(form)}}
+                {{ form_row(form.title) }}
+                {{ form_row(form.content) }}
+                {{ form_row(form.dataPosted) }}
+                {{ form_row(form.image) }}
+                {{ form_row(form.tags) }}
+
+                <button class="w3-button w3-block w3-gray w3-section w3-padding" type="submit">Submit</button>
+
+                {{ form_end(form) }}
+
+            </div>
+        </div>
+    </div>
+
+
+    <!--<div class="w3-container">
+
+
+        <form action="" method='post'>
+
+
+            <p><label>Title</label><br />
+                <input type='text' name='postTitle' value=''></p>
+
+            <p><label>Description</label><br />
+                <textarea name='postDesc' cols='60' rows='10'><?php if(isset($error)){ echo $_POST['postDesc'];}?></textarea></p>
+
+            <p><label>Content</label><br />
+                <textarea name='postCont' cols='60' rows='10'></textarea></p>
+
+            <p><input type='submit' name='submit' value='Submit'></p>
+
+        </form>
+
+
+    </div>-->
+
+{% endblock %}
 </html>
